# chat-with-rust

./: Cargo.toml
chat_server/: Cargo.toml
chat_server/src/: config.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  messages.rs  mod.rs
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  sse.rs
